--- a/coc-settings.json
+++ b/coc-settings.json
@@ -39,5 +39,10 @@
   },
   "python.linting.pylintEnabled": false,
   "python.venvFolders": ["envs", ".pyenv", ".direnv", "venv"],
-  "python.linting.flake8Enabled": true
+  "python.linting.flake8Enabled": true,
+  "python.linting.flake8Args": [
+    "--max-line-length=120",
+    "--ignores=F0002"
+  ],
+  "jedi.enable": false
 }
