--- a/coc-settings.json
+++ b/coc-settings.json
@@ -44,5 +44,6 @@
     "--max-line-length=120",
     "--ignores=F0002"
   ],
-  "jedi.enable": false
+  "jedi.enable": false,
+  "prettier.semi": false
 }
