:sparkles: add python back

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -14,7 +14,7 @@
     "typescript.tsx",
     "typescriptreact",
     "go",
-    "python"
+    "python",
     "dart"
   ],
   "suggest.timeout": 5000,
