:sparkles: Update kitty config

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -16,12 +16,10 @@ macos_thicken_font 0
 # Tab design
 tab_bar_edge bottom
 # tab_bar_style separator
-# tab_separator " ┇"
+tab_separator " ┇"
 tab_bar_style powerline
-# tab_powerline_style round
 tab_bar_background none
-tab_title_template "{index}"
-tab_bar_background none
+tab_title_template "{index}{activity_symbol}|{title}"
 active_tab_font_style   bold
 
 
