:wrench: change the kitty configuration and update vim keymap

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -18,7 +18,7 @@ tab_bar_edge bottom
 # tab_bar_style separator
 tab_separator " ┇"
 tab_bar_style powerline
-tab_bar_background none
+# tab_bar_background none
 tab_title_template "{index}{activity_symbol}|{title}"
 active_tab_font_style   bold
 
@@ -76,3 +76,9 @@ map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
 map cmd+0 goto_tab 10
 term xterm-256color
+
+
+# BEGIN_KITTY_THEME
+# Dracula
+include current-theme.conf
+# END_KITTY_THEME
