:wrench: change theme to tokyonight

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,7 +1,8 @@
 listen_on unix:/tmp/mykitty
 dynamic_background_opacity yes
 allow_remote_control yes
-include ./tokyonight-day.conf
+include tokyonight.conf
+#include ./tokyonight-day.conf
 # include ./dracula.conf
 #include ./aura-theme.conf
 
