:wrench: update theme to tokyonight-storm

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,9 +1,9 @@
 listen_on unix:/tmp/mykitty
 dynamic_background_opacity yes
 allow_remote_control yes
-include tokyonight.conf
+include ./tokyonight-storm.conf
 #include ./tokyonight-day.conf
-# include ./dracula.conf
+#include ./dracula.conf
 #include ./aura-theme.conf
 
 # Font
