:wrench: update config for vue and terraform

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,7 +1,7 @@
 listen_on unix:/tmp/mykitty
 dynamic_background_opacity yes
 allow_remote_control yes
-include ./tokyonight-storm.conf
+#include ./tokyonight-storm.conf
 #include ./tokyonight-day.conf
 #include ./dracula.conf
 #include ./aura-theme.conf
@@ -82,5 +82,5 @@ term xterm-256color
 
 # BEGIN_KITTY_THEME
 # Dracula
-#include current-theme.conf
+include current-theme.conf
 # END_KITTY_THEME
